Lamp as camera: shadow buffer clipping extents sometimes inappropriately used as the viewport clipping extents. #62952

Closed
opened 2019-03-26 07:44:25 +01:00 by gandalf3 · 11 comments
Member

System Information
Operating system: Archlinux
Graphics card: Vega 64

Blender Version
Broken: 2.80 f79ad42808, 2.79 d7ef1af22b.

Short description of error
See https://blender.stackexchange.com/q/134790/599
When using a lamp as camera, when in camera view, the viewport clipping extents are overridden with the lamp's shadow buffer clipping extents.
Unfortunately, not all engines or lamp types actually use the shadow buffer clipping extents or expose them in the UI, leading to confusing behavior.

Exact steps for others to reproduce the error

lamp_camera_clipping_extents.blend

  1. Try changing the lamp's clip start, note that it updates the clip start in camera view.
  2. Note that there is no way to change the clip end without changing the lamp type.
**System Information** Operating system: Archlinux Graphics card: Vega 64 **Blender Version** Broken: 2.80 f79ad428085e, 2.79 d7ef1af22bf. **Short description of error** See https://blender.stackexchange.com/q/134790/599 When using a lamp as camera, when in camera view, the viewport clipping extents are overridden with the lamp's shadow buffer clipping extents. Unfortunately, not all engines or lamp types actually use the shadow buffer clipping extents or expose them in the UI, leading to confusing behavior. **Exact steps for others to reproduce the error** [lamp_camera_clipping_extents.blend](https://archive.blender.org/developer/F6884450/lamp_camera_clipping_extents.blend) 1. Try changing the lamp's clip start, note that it updates the clip start in camera view. 2. Note that there is no way to change the clip end without changing the lamp type.
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-03-26 15:58:31 +01:00

@fclem bug or not? I think this is intended to be used to visualize the light clipping.

@fclem bug or not? I think this is intended to be used to visualize the light clipping.

Added subscriber: @brecht

Added subscriber: @brecht

The clip end is computed automatically based on light power. You can set it manually using the custom distance.

I don't know why using a lamp as a camera should be supported. @brecht was this a legacy feature from Blender Internal?

The clip end is computed automatically based on light power. You can set it manually using the custom distance. I don't know why using a lamp as a camera should be supported. @brecht was this a legacy feature from Blender Internal?

This issue was referenced by d67122e027

This issue was referenced by d67122e02733f38137148bdaab6e80c0f14f080a

Any object can be a camera, which is a bit weird but probably not worth removing.

I'll just remove the behavior where it uses the lamp clip/start end for the camera, makes no sense anymore for Eevee and Cycles.

Any object can be a camera, which is a bit weird but probably not worth removing. I'll just remove the behavior where it uses the lamp clip/start end for the camera, makes no sense anymore for Eevee and Cycles.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Member

In #62952#648732, @fclem wrote:
I don't know why using a lamp as a camera should be supported. @brecht was this a legacy feature from Blender Internal?

Objects as Camera was mainly for positioning e.g. a Spot light, so you could easily see where the Spot was pointing, what'd be seen or in shadow by that lamp (useful especially for the old buffer shadows).

If it brings trouble we could ask the community if it's still being used. I personally haven't used it in a long while.

> In #62952#648732, @fclem wrote: > I don't know why using a lamp as a camera should be supported. @brecht was this a legacy feature from Blender Internal? Objects as Camera was mainly for positioning e.g. a Spot light, so you could easily see where the Spot was pointing, what'd be seen or in shadow by that lamp (useful especially for the old buffer shadows). If it brings trouble we could ask the community if it's still being used. I personally haven't used it in a long while.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62952
No description provided.