Fix T62952: remove lamp as camera using the lamp clip start/end.

Eevee and Cycles don't use these clipping distances the same as Blender
Internal did, or at all in most cases. Just remove this since it makes no
sense anymore.